Add documentation of BairroController
