# app/Http/Controllers/BairroController.php
@@ -17,10 +17,15 @@ class BairroController extends Controller
     }
 
     /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
-     */
+     * @OA\Get(
+     *     tags={"Bairros"},
+     *     summary="Retorna uma lista de bairros cadastrados",
+     *     description="Retorna um Array com todos os bairros cadastrados",
+     *     path="/bairro",
+     *     @OA\Response(response="200", description="Array com bairros"),
+     *     @OA\Response(response="503", description="JSON com mensagem de que não foi possível pesquisar um determinado bairro.")
+     * )
+    */
     public function index(Request $request)
     {
         $busca = $this->model->filter([
@@ -37,10 +42,40 @@ class BairroController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     * @OA\Post(
+     *      path="/bairro",
+     *      description="Armazena um novo bairro.",
+     *      tags={"Bairros"},
+     *      summary="Retorna o bairro cadastrado",
+     *      @OA\RequestBody(
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\Schema(
+     *                  @OA\Property(
+     *                      property="codigo_municipio",
+     *                      type="integer"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="nome",
+     *                      type="string"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="status",
+     *                      type="integer"
+     *                  ),
+     *              example={"codigo_municipio": 5, "nome": "CENTRO", "status": 1}
+     *              ),
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Bairro cadastrado com sucesso.",
+     *      ),
+     *      @OA\Response(
+     *          response=503,
+     *          description="Não foi possível cadastrar o bairro.",
+     *      ),
+     * )
      */
     public function store(BairroRequest $request)
     {
@@ -56,11 +91,15 @@ class BairroController extends Controller
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
+     * @OA\Get(
+     *     tags={"Bairros"},
+     *     summary="Retorna um bairro cadastrado",
+     *     description="Retorna um JSON com o bairro pesquisado.",
+     *     path="/bairro/{id}",
+     *     @OA\Response(response="200", description="JSON com o bairro"),
+     *     @OA\Response(response="503", description="JSON com mensagem de que não foi possível encontrar um determinado bairro.")
+     * )
+    */
     public function show($id)
     {
         $bairro = Bairro::where('codigo_bairro', $id)->first();
@@ -68,11 +107,32 @@ class BairroController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Put(
+     *      path="/bairro/{id}",
+     *      description="Atualiza um bairro",
+     *      tags={"Bairros"},
+     *      summary="Retorna o bairro atualizado.",
+     *      @OA\Parameter(
+     *          name="request",
+     *          in="path",
+     *          description="Dados da requisição",
+     *          required=true,
+     *      ),
+     *      @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          description="Id do bairro que será atualizado.",
+     *          required=true,
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Bairro atualizado com sucesso.",
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Não foi possível encontrar o bairro.",
+     *      ),
+     * )
      */
     public function update(Request $request, $id)
     {
@@ -82,10 +142,26 @@ class BairroController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Delete(
+     *      path="/bairro/{id}",
+     *      description="Apaga um bairro",
+     *      tags={"Bairros"},
+     *      summary="Retorna um array vazio.",
+     *      @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          description="Id do bairro que será apagado.",
+     *          required=true,
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Bairro apagado com sucesso.",
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Não foi possível encontrar o bairro.",
+     *      ),
+     * )
      */
     public function destroy($id)
     {
